--- a/.github/workflows/z-deploy-build-web-s-18572-Cull-Canyon-Rd-Castro-Valley,-CA-94552.yaml
+++ b/.github/workflows/z-deploy-build-web-s-18572-Cull-Canyon-Rd-Castro-Valley,-CA-94552.yaml
@@ -6,13 +6,15 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ui/web-s
+        working-directory:  web-s-18572-cull-canyon-rd-castro-valley,-ca-94552
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
+
       - name: Rename directory
-        run: mv ../web-s ../web-s-18572-cull-canyon-rd-castro-valley,-ca-94552
+        run: mv ui/web-s web-s-18572-cull-canyon-rd-castro-valley,-ca-94552
+        working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
