--- a/.github/workflows/z-deploy-build-web-s-24327-Kome-Rd-Mi-Wuk-Village,-CA-95346.yaml
+++ b/.github/workflows/z-deploy-build-web-s-24327-Kome-Rd-Mi-Wuk-Village,-CA-95346.yaml
@@ -6,13 +6,15 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ui/web-s
+        working-directory:  web-s-24327-kome-rd-mi-wuk-village,-ca-95346
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
+
       - name: Rename directory
-        run: mv ../web-s ../web-s-24327-kome-rd-mi-wuk-village,-ca-95346
+        run: mv ui/web-s web-s-24327-kome-rd-mi-wuk-village,-ca-95346
+        working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
