--- a/.github/workflows/z-deploy-build-web-s-817-Rodney-Dr-San-Leandro,-CA-94577.yaml
+++ b/.github/workflows/z-deploy-build-web-s-817-Rodney-Dr-San-Leandro,-CA-94577.yaml
@@ -6,13 +6,15 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ui/web-s
+        working-directory:  web-s-817-rodney-dr-san-leandro,-ca-94577
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
+
       - name: Rename directory
-        run: mv ../web-s ../web-s-817-rodney-dr-san-leandro,-ca-94577
+        run: mv ui/web-s web-s-817-rodney-dr-san-leandro,-ca-94577
+        working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
