--- a/.github/workflows/z-deploy-build-web-s-921-Colusa-Ave-Oroville,-CA-95965.yaml
+++ b/.github/workflows/z-deploy-build-web-s-921-Colusa-Ave-Oroville,-CA-95965.yaml
@@ -6,13 +6,15 @@ jobs:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ui/web-s
+        working-directory:  web-s-921-colusa-ave-oroville,-ca-95965
     steps:
       - name: Checkout
         uses: actions/checkout@v3
 
+
       - name: Rename directory
-        run: mv ../web-s ../web-s-921-colusa-ave-oroville,-ca-95965
+        run: mv ui/web-s web-s-921-colusa-ave-oroville,-ca-95965
+        working-directory: ${{ github.workspace }}
 
       - name: Set up Node.js
         uses: actions/setup-node@v2
