--- a/data/fleet/command/wrangler.toml
+++ b/data/fleet/command/wrangler.toml
@@ -2,3 +2,5 @@ name = "fleet-command"
 main = "src/index.js"
 compatibility_date = "2023-12-27"
 
+[vars]
+UPSTASH_REDIS_REST_URL='https://usw1-curious-swan-33560.upstash.io'
