--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -4,8 +4,8 @@ on:
   push:
     branches:
       - main
-    paths:
-      - 'data/fleet/Sourcing/**'
+#    paths:
+#      - 'data/fleet/Sourcing/**'
 
 jobs:
   build-and-push:
@@ -28,7 +28,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           registry: docker.io
-          username: usernamex36
+          username: cybernetic-stream
           password: ${{ secrets.DOCKERHUB_TOKEN }}
 
       - name: Build and push to GitHub Container Registry
