--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -31,29 +31,32 @@ jobs:
           file: ./data/fleet/Sourcing/Dockerfile
           platforms: linux/amd64
           push: true
-          tags: docker.io/usernamex36/sourcing-app:latest
+          tags: docker.io/usernamex36/fleet-sourcing:latest
           build-args: |
             ADESA_PASSWORD=${{ secrets.ADESA_PASSWORD }}
             GCP_SERVICE_ACCOUNT=${{ secrets.GCP_SERVICE_ACCOUNT }}
             R2_SECRET_ACCESS_KEY=${{ secrets.R2_SECRET_ACCESS_KEY }}
 
-#      # Set up Google Cloud CLI
-#      - name: Set up Google Cloud
-#        uses: google-github-actions/setup-gcloud@master
-#        with:
-#          service_account_key: ${{ secrets.GCP_SA_KEY }}
-#          project_id: ${{ secrets.GCP_PROJECT_ID }}
-#
-#      # Configure Docker to use the gcloud command-line tool as a credential helper
-#      - name: Configure Docker for GCP
-#        run: |
-#          gcloud auth configure-docker
-#
-#      # Deploy to Google Cloud Run
-#      - name: Deploy to Cloud Run
-#        run: |
-#          gcloud run deploy ${{ secrets.SERVICE_NAME }} \
-#            --image ghcr.io/${{ github.repository }}/sourcing-app:latest \
-#            --platform managed \
-#            --region ${{ secrets.GCP_REGION }} \
-#            --allow-unauthenticated
+      # Set up Google Cloud CLI
+      - name: Set up Google Cloud
+        uses: google-github-actions/setup-gcloud@master
+        with:
+          service_account_key: ${{ secrets.GCP_SERVICE_ACCOUNT }}
+          project_id: projectid-x
+
+      # Configure Docker to use the gcloud command-line tool as a credential helper
+      - name: Configure Docker for GCP
+        run: |
+          gcloud auth configure-docker
+
+      # Deploy to Google Cloud Run
+      - name: Deploy to Cloud Run
+        run: |
+          gcloud run deploy fleet-sourcing \
+            --image docker.io/usernamex36/fleet-sourcing:latest \
+            --platform managed \
+            --region us-west-2 \
+            --memory 1Gi \
+            --allow-unauthenticated
+            --execution-environment gen2
+            --cpu-boost
