--- a/.github/workflows/build-deploy-fleet-sourcing.yaml
+++ b/.github/workflows/build-deploy-fleet-sourcing.yaml
@@ -54,12 +54,12 @@ jobs:
       - name: Deploy to Cloud Run
         run: |
           gcloud run deploy fleet-sourcing \
-            --execution-environment=gen2
+            --execution-environment=gen2 \
             --image docker.io/usernamex36/fleet-sourcing:latest \
             --platform managed \
             --region us-west2 \
             --memory 1Gi \
-            --allow-unauthenticated
-            --execution-environment gen2
+            --allow-unauthenticated \
+            --execution-environment gen2 \
             --cpu-boost
           
