--- a/.github/workflows/schedule-fleet-sourcing-refresh.yaml
+++ b/.github/workflows/schedule-fleet-sourcing-refresh.yaml
@@ -2,7 +2,7 @@ name: Schedule fleet sourcing refresh
 
 on:
   schedule:
-    - cron:  '*/30 * * * *'
+    - cron:  '* * * * *'
 
 jobs:
   makeWebRequest:
