--- a/.github/workflows/fleet-sourcing.yaml
+++ b/.github/workflows/fleet-sourcing.yaml
@@ -48,7 +48,7 @@ jobs:
           gcloud auth configure-docker
 
       - name: Decode and set GCP Service Account
-        run: echo "GCP_SERVICE_ACCOUNT=$(echo '${{ secrets.BASE64_GCP_SERVICE_ACCOUNT_ESCAPED }}' | base64 --decode)" >> $GITHUB_ENV
+        run: echo "GCP_SERVICE_ACCOUNT=$(echo '${{ secrets.BASE64_GCP_SERVICE_ACCOUNT }}' | base64 --decode)" >> $GITHUB_ENV
 
       - name: deploy
         run: |
@@ -61,7 +61,7 @@ jobs:
             --cpu 1 \
             --allow-unauthenticated \
             --cpu-boost \
-            --set-env-vars ADESA_PASSWORD=${{ secrets.ADESA_PASSWORD }},R2_SECRET_ACCESS_KEY=${{ secrets.R2_SECRET_ACCESS_KEY }},GCP_SERVICE_ACCOUNT='${{ env.GCP_SERVICE_ACCOUNT }}'
+            --set-env-vars ADESA_PASSWORD=${{ secrets.ADESA_PASSWORD }},R2_SECRET_ACCESS_KEY=${{ secrets.R2_SECRET_ACCESS_KEY }},GCP_SERVICE_ACCOUNT='${{ secrets.BASE64_GCP_SERVICE_ACCOUNT }}'
 
           
           
