--- a/.github/workflows/fleet-sourcing.yaml
+++ b/.github/workflows/fleet-sourcing.yaml
@@ -17,12 +17,12 @@ jobs:
       - name: setup buildx
         uses: docker/setup-buildx-action@v1
 
-      - name: login docker-hub
+      - name: login to GHCR
         uses: docker/login-action@v1
         with:
-          registry: docker.io
-          username: usernamex36
-          password: ${{ secrets.DOCKERHUB_TOKEN }}
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
       - name: build and push image
         uses: docker/build-push-action@v2
@@ -31,19 +31,19 @@ jobs:
           file: ./data/fleet/Sourcing/Dockerfile
           platforms: linux/amd64
           push: true
-          tags: docker.io/usernamex36/fleet-sourcing:latest
+          tags: ghcr.io/${{ github.repository_owner }}/fleet-sourcing:latest
 
       - name: gcloud auth
         uses: google-github-actions/auth@v2.0.0
         with:
-          credentials_json: '$(${{secrets.BASE64_GCP_SERVICE_ACCOUNT}} | base64 --decode)'
+          credentials_json: ${{ secrets.BASE64_GCP_SERVICE_ACCOUNT }}
 
       - name: setup gcloud
         uses: google-github-actions/setup-gcloud@v2.0.1
         with:
           project_id: projectid-x
 
-      - name: gclpud configure docker
+      - name: gcloud configure docker
         run: |
           gcloud auth configure-docker
 
@@ -51,7 +51,7 @@ jobs:
         run: |
           gcloud run deploy fleet-sourcing \
             --execution-environment=gen2 \
-            --image docker.io/usernamex36/fleet-sourcing:latest \
+            --image ghcr.io/${{ github.repository_owner }}/fleet-sourcing:latest \
             --platform managed \
             --region us-west2 \
             --memory 2Gi \
@@ -59,6 +59,3 @@ jobs:
             --allow-unauthenticated \
             --cpu-boost \
             --set-env-vars ADESA_PASSWORD=${{ secrets.ADESA_PASSWORD }},R2_SECRET_ACCESS_KEY=${{ secrets.R2_SECRET_ACCESS_KEY }},GCP_SERVICE_ACCOUNT='${{ secrets.BASE64_GCP_SERVICE_ACCOUNT }}'
-
-          
-          
