--- a/.github/workflows/fleet-sourcing.yaml
+++ b/.github/workflows/fleet-sourcing.yaml
@@ -14,6 +14,9 @@ jobs:
       - name: checkout
         uses: actions/checkout@v2
 
+      - name: Define Tag
+        run: echo "IMAGE_TAG=$(echo $GITHUB_SHA | cut -c1-7)" >> $GITHUB_ENV
+
       - name: setup buildx
         uses: docker/setup-buildx-action@v1
 
@@ -31,7 +34,7 @@ jobs:
           file: ./data/fleet/Sourcing/Dockerfile
           platforms: linux/amd64
           push: true
-          tags: docker.io/usernamex36/fleet-sourcing:latest
+          tags: docker.io/usernamex36/fleet-sourcing:${{ env.IMAGE_TAG }}
 
       - name: gcloud auth
         uses: google-github-actions/auth@v2.0.0
@@ -51,7 +54,7 @@ jobs:
         run: |
           gcloud run deploy fleet-sourcing \
             --execution-environment=gen2 \
-            --image docker.io/usernamex36/fleet-sourcing:latest \
+            --image docker.io/usernamex36/fleet-sourcing:${{ env.IMAGE_TAG }} \
             --platform managed \
             --region us-west2 \
             --memory 2Gi \
@@ -59,6 +62,3 @@ jobs:
             --allow-unauthenticated \
             --cpu-boost \
             --set-env-vars ADESA_PASSWORD=${{ secrets.ADESA_PASSWORD }},R2_SECRET_ACCESS_KEY=${{ secrets.R2_SECRET_ACCESS_KEY }},GCP_SERVICE_ACCOUNT='${{ secrets.BASE64_GCP_SERVICE_ACCOUNT }}'
-
-          
-
